# Projekt

./: CLI.cpp  CLI.h  CMakeLists.txt  README.md  andmestruktuurid.h  api_suhtlus.cpp  api_suhtlus.h  config.h  failid.cpp  failid.h  main.cpp  retsepti_otsing.cpp  retsepti_otsing.h  user_interface.cpp  utility.cpp  utility.h
